# InternalAssessment

./: io.github.diegoivan.internalassesment.json  io.github.diegoivan.internalassessment.json  meson.build
data/: io.github.diegoivan.internalassesment.appdata.xml.in  io.github.diegoivan.internalassesment.desktop.in  io.github.diegoivan.internalassesment.gschema.xml  io.github.diegoivan.internalassessment.appdata.xml.in  io.github.diegoivan.internalassessment.desktop.in  io.github.diegoivan.internalassessment.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Application.vala  Window.vala  main.vala  meson.build
src/Services/: RecordObject.vala
src/Widgets/: RecordList.vala  RecordRow.vala  Window.vala
src/resources/: internal_assesment.gresource.xml  internal_assessment.gresource.xml  recordlist.ui  recordrow.ui  window.ui
